[tool.poetry]
name = "xhsparser"
version = "0.1.0"
description = "小红书图片视频链接解析工，提供 web API"
authors = ["okooo5km <okooo5km@gmail.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
toml = "^0.10.2"
uvicorn = "^0.27.1"
aiohttp = ">=3.9.1"
textual = ">=0.47.1"
pyperclip = ">=1.8.2"
lxml = ">=5.1.0"
pyyaml = ">=6.0.1"
aiosqlite = ">=0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
